fix: hide horizontal overflow in mobile screens

--- a/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
+++ b/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
@@ -721,6 +721,7 @@ $duration: 1000ms;
     border-block-end: 1px solid $border-subtle-01;
     /* stylelint-disable-next-line carbon/layout-use */
     inset-block-start: var(--#{$pkg-prefix}-page-header-header-top);
+    overflow-x: clip;
   }
 
   // When disableStickyTabBar is true, remove sticky positioning from root
